PRISM-860: fix: MyColorPalette was being cut off on smaller screens

--- a/src/components/Facets/ColorVisualizerWrapper/ColorVisualizer.scss
+++ b/src/components/Facets/ColorVisualizerWrapper/ColorVisualizer.scss
@@ -278,8 +278,6 @@
   &__footer {
     display: flex;
     flex-direction: row;
-    flex-flow: column-reverse;
-    flex-wrap: wrap;
     justify-content: space-between;
     @include respond-above(sm) {
       flex-flow: row;
